--- a/W01/rec.css
+++ b/W01/rec.css
@@ -2,6 +2,20 @@
   padding:0;
   margin:0;
 }
-.rectangle{
-
+#rectangle{
+  text-align:center;
+  padding-top:100px;
+}
+#rectangle-calc{
+  height:30px;
+  width:60px;
+}
+.star{
+  color:red;
+}
+input{
+  line-height:30px;
+}
+p{
+  color:red;
 }
